[package]
name = "foundationdb-exporter"
version = "0.1.0"
edition = "2021"
authors = [ "Alexandre Burgoni <alexandre.burgoni@clever-cloud.com>" ]
description = "A monitoring tool for FoundationDB with exporting capabilities for prometheus"
keywords = ["foundationdb", "monitoring", "metrics", "exporter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.3"
hyper = { version = "1.1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
lazy_static = "1.4.0"
http-body-util = "0.1.0"
bytes = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "^1.0.76"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive", "std"]}
futures = "0.3"
clap = { version = "4.4.11", features = ["derive", "env"] }
serde_path_to_error = "0.1"
